--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.8.6",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "redux-saga": "^1.1.3"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
